<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
    android:layout_margin="16dp">

    <ImageView
        android:id="@+id/open_photo"
        android:layout_gravity="center_horizontal"
        android:scaleType="centerCrop"
        android:layout_width="120dp"
        android:layout_height="120dp"
        />

    <TextView
        android:id="@+id/change_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:textColor="@android:color/holo_blue_bright"
        android:text="@string/changePhoto"/>

    <Switch
        android:id="@+id/switch_notifications"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top|left"
        android:text="@string/notifications"/>

    <TextView
        android:layout_marginTop="16dp"
        android:clickable="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sortBy"
        android:layout_marginBottom="16dp"/>
    <TextView
        android:id="@+id/type_of_sort"
        android:text="@string/relevSort"
        android:textSize="26sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Spinner
        android:id="@+id/spinner_theme"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</LinearLayout>